RESOLVED FIXED189224
REGRESSION(r235165): [GStreamer] Major video performance regression
https://bugs.webkit.org/show_bug.cgi?id=189224
Summary REGRESSION(r235165): [GStreamer] Major video performance regression
Michael Catanzaro
Reported 2018-09-01 20:36:30 PDT
r235165 "[CoordGraphics] Switch to Nicosia::CompositionLayer state tracking" has introduced a *very major* video performance regression that should be immediately noticeable e.g. when playing any video on YouTube. I can reproduce the same issue on http://download.blender.org/peach/bigbuckbunny_movies/big_buck_bunny_720p_stereo.ogg, which is a much simpler case than YouTube. It's not straightforward to rollout due to many code changes in these files. Fortunately, this commit is not on the 2.22 branch, so video playback in 2.21.92 is fine.
Attachments
Patch (2.22 KB, patch)
2018-09-03 09:07 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2018-09-03 09:07:24 PDT
Philippe Normand
Comment 2 2018-09-03 09:16:14 PDT
I tested this on desktop GTK and iMX6 WPE. Regression fixed. Thanks!
Xabier Rodríguez Calvar
Comment 3 2018-09-04 01:29:12 PDT
I guess this didn't land yet, otherwise bug would be closed, right?
Zan Dobersek
Comment 4 2018-09-04 01:38:30 PDT
Comment on attachment 348774 [details] Patch Clearing flags on attachment: 348774 Committed r235608: <https://trac.webkit.org/changeset/235608>
Zan Dobersek
Comment 5 2018-09-04 01:38:34 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 6 2018-09-04 18:17:48 PDT
(In reply to Philippe Normand from comment #2) > I tested this on desktop GTK and iMX6 WPE. Regression fixed. Thanks! It's fixed for me too, yay!
Note You need to log in before you can comment on or make changes to this bug.